--- a/SkEditorPlus/Windows/Generators/GuiGenerator.xaml
+++ b/SkEditorPlus/Windows/Generators/GuiGenerator.xaml
@@ -1,4 +1,4 @@
-﻿<hc:Window x:Class="SkEditorPlus.Windows.Generators.GuiPreview"
+﻿<hc:Window x:Class="SkEditorPlus.Windows.Generators.GuiGenerator"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:hc="https://handyorg.github.io/handycontrol"
@@ -51,6 +51,9 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
+            </Grid>
+            <Grid Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10,0,0,10">
+                <CheckBox x:Name="UseSkriptGuiCheckBox"  Content="{DynamicResource GUIGenUseSkriptGuiAddon}" Background="{StaticResource RegionBrush}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="1"/>
             </Grid>
             <Grid Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10">
                 <Grid.ColumnDefinitions>
